# orthus

./: .gitignore  README.md  app.dockerfile  build.sh  docker-compose.yaml  orthus.drawio  relay.dockerfile
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.css
core/: .gitignore  CMakeLists.txt  README.md  block_matching.yml  build.sh  options.yml
core/src/: calib.cpp  calib.h  main.cpp  stereo.cpp  stereo.h  stream.cpp  stream.h  util.cpp  util.h
relay/: package-lock.json
relay/src/: config.js  conflator.js  index.js  socket.js
relay/web/: index.html
server/: Pipfile  config.py  main.py
server/controllers/: streams.py
server/routes/: app.py  stream.py
server/services/: streams.py
